BUG: Made changes to file so that it would correctly compile
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13012 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -32,6 +32,7 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML
   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm
   ${CMAKE_CURRENT_SOURCE_DIR}/Registration
+  ${CMAKE_CURRENT_SOURCE_DIR}/Graph
   ${Slicer3_Libs_INCLUDE_DIRS}
   ${Slicer3_Base_INCLUDE_DIRS}
   ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
@@ -47,37 +48,10 @@ file(GLOB headers
   "${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/*.h"
   "${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/*.txx"
   "${CMAKE_CURRENT_SOURCE_DIR}/Registration/*.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Graph/*.h"
   )
 
-if (IBM_FLAG)
-MESSAGE(STATUS  "===========================================================")
-MESSAGE(STATUS  " Compiling with IBM Flag ")
-MESSAGE(STATUS  "===========================================================")
-
-include_directories(
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_BINARY_DIR}
-  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML
-  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm
-  ${CMAKE_CURRENT_SOURCE_DIR}/Registration
-  ${CMAKE_CURRENT_SOURCE_DIR}/IBM
-  ${CMAKE_CURRENT_SOURCE_DIR}/Graph
-  ${Slicer3_Libs_INCLUDE_DIRS}
-  ${Slicer3_Base_INCLUDE_DIRS}
-  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
-  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
-  ${Volumes_SOURCE_DIR}
-  ${Volumes_BINARY_DIR}
-  )
-
-
-file(GLOB headers
-   $headers 
-  "${CMAKE_CURRENT_SOURCE_DIR}/IBM/*.cxx"
-  )
-
-file(GLOB TCLFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "IBM/*.tcl" "Tcl/*.tcl" )
+file(GLOB TCLFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Task/*.tcl" )
 
 foreach(file ${TCLFILES})
   configure_file(
@@ -91,9 +65,6 @@ install(
   FILES ${TCLFILES}
   DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}
   )
-
-endif(IBM_FLAG)
- 
 
 install(FILES 
   ${headers} 
@@ -112,7 +83,6 @@ set(EMSegment_SRCS
   # wizard
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentParametersSetStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentIntensityImagesStep.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentIntensityNormalizationStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentAnatomicalStructureStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentSpatialPriorsStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentNodeParametersStep.cxx
@@ -120,6 +90,8 @@ set(EMSegment_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentRegistrationParametersStep.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentRunSegmentationStep.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentInputChannelsStep.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard/vtkEMSegmentPreProcessingStep.cxx
   # MRML
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLEMSNode.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLEMSSegmenterNode.cxx
@@ -161,16 +133,12 @@ set(EMSegment_SRCS
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMMarkov.cxx
   )
 
-if (IBM_FLAG)
-  set(EMSegment_SRCS ${EMSegment_SRCS}
-   ${CMAKE_CURRENT_SOURCE_DIR}/IBM/vtkEMSegmentInputChannelsStep.cxx
-   ${CMAKE_CURRENT_SOURCE_DIR}/IBM/vtkEMSegmentPreProcessingStep.cxx
+ set(EMSegment_SRCS ${EMSegment_SRCS}
    ${CMAKE_CURRENT_SOURCE_DIR}/Graph/vtkImageGraph.cxx
    ${CMAKE_CURRENT_SOURCE_DIR}/Graph/vtkIndirectLookupTable.cxx
    ${CMAKE_CURRENT_SOURCE_DIR}/Graph/vtkImageDrawObjects.cxx
    ${CMAKE_CURRENT_SOURCE_DIR}/Graph/vtkImageCurveRegion.cxx
   )
-endif(IBM_FLAG)
 
 set_source_files_properties(
   # Algorithm sources (temporary exclusion)
