ENH: support NRRD. add user selection for output directory.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13070 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
@@ -30,7 +30,8 @@ set(TEMP "${Slicer3_BINARY_DIR}/Testing/Temporary")
 add_test(DicomToNrrdConverterTest ${Slicer3_EXE} --launch DicomToNrrdConverterTest
     ModuleEntryPoint
     --inputDicomDirectory ${TEST_DATA}/DWIDicom
-    --outputVolume ${TEMP}/DWIDicom.nhdr
+    --outputDirectory ${TEMP}
+    --outputVolume DWIDicom.nhdr
   )
 
 set (CLP DicomToNrrdConverter)
