COMP: Newly added test only works from withing the Slicer3 Tree, adn this was causing external packages that depend on DicomToNrrd to fail.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13105 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
@@ -8,7 +8,11 @@ if(COMMAND CMAKE_POLICY)
 endif(COMMAND CMAKE_POLICY)
 mark_as_advanced(CMAKE_BACKWARDS_COMPATIBILITY)
 
-ADD_SUBDIRECTORY(Testing)
+if (Slicer3_SOURCE_DIR)
+  ##The current testing suite only works from within Slicer3.  Other packages
+  ##that use this tool will not properly run the test
+  ADD_SUBDIRECTORY(Testing)
+endif (Slicer3_SOURCE_DIR)
 
 set (CLP DicomToNrrdConverter)
 set ( ${CLP}_SOURCE ${CLP}.cxx)
