BUG: try fix for failing fresh/nightly build that doesn't find Slicer3 (because it hasn't been built yet)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13110 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
@@ -5,8 +5,10 @@ include_regular_expression("^.*$")
 
 enable_testing()
 
-find_package(Slicer3 REQUIRED)
-include(${Slicer3_USE_FILE})
+if(NOT Slicer3_SOURCE_DIR)
+  find_package(Slicer3 REQUIRED)
+  include(${Slicer3_USE_FILE})
+endif(NOT Slicer3_SOURCE_DIR)
 
 find_package(GenerateCLP REQUIRED)
 if(GenerateCLP_FOUND)
