BUG: disable tests for culled module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13111 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -626,14 +626,14 @@ target_link_libraries(${CLP}Test MRML)
 
 ##################################
 # FreesurferSurfaceSectionExtraction tests
-add_test(FreesurferSurfaceSectionExtractionTest ${Slicer3_EXE} --launch FreesurferSurfaceSectionExtractionTest
-  FreesurferSurfaceSectionExtractionTest --help
-  )
+#add_test(FreesurferSurfaceSectionExtractionTest ${Slicer3_EXE} --launch FreesurferSurfaceSectionExtractionTest
+#FreesurferSurfaceSectionExtractionTest --help
+#)
 
-set (CLP FreesurferSurfaceSectionExtraction)
-add_executable(${CLP}Test ${CLP}Test.cxx)
-add_dependencies(${CLP}Test ${CLP})
-target_link_libraries(${CLP}Test ITKIO)
+#set (CLP FreesurferSurfaceSectionExtraction)
+#add_executable(${CLP}Test ${CLP}Test.cxx)
+#add_dependencies(${CLP}Test ${CLP})
+#target_link_libraries(${CLP}Test ITKIO)
 
 ##################################
 # GradientAnisotropicDiffusion tests
