ENH: added the RobustStaticsSegmenter into trunk/Application/CLI/RobustStatisticsSegmenter dirctory. it compiles and works on my machien: 64bit RHEL gcc 4.1.2
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13129 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -679,6 +679,7 @@ SET(cli_modules
   ExtractSkeleton
   #Java
   N4ITKBiasFieldCorrection
+  RobustStatisticsSegmenter
   )
 
 if ( ${ITK_VERSION_MAJOR} GREATER 3 )
