--- a/Applications/CLI/BRAINSTools/BRAINSROIAuto/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSROIAuto/TestSuite/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(BRATestCompare BRATestCompare.cxx)
 target_link_libraries(BRATestCompare ${ITK_LIBRARIES})
 set_target_properties(BRATestCompare PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BRAINSROIAuto_BINARY_DIR})
 
-add_test(BRATestImage BRATestImage ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz)
+add_test(BRATestImage ${BRAINSROIAuto_BINARY_DIR}/BRATestImage ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz)
 
 add_test(RunBRAINSROIAuto ${TESTING_BINARY_DIR}/BRAINSROIAuto
   --inputVolume ${BRAINSROIAuto_BINARY_DIR}/sphere.nii.gz
@@ -20,7 +20,7 @@ add_test(RunBRAINSROIAuto ${TESTING_BINARY_DIR}/BRAINSROIAuto
   --outputROIMaskVolume ${BRAINSROIAuto_BINARY_DIR}/maskSphere.nii.gz)
 set_tests_properties ( RunBRAINSROIAuto PROPERTIES DEPENDS BRATestImage)
 
-add_test(CompareMasks BRATestCompare
+add_test(CompareMasks ${BRAINSROIAuto_BINARY_DIR}/BRATestCompare
   ${BRAINSROIAuto_BINARY_DIR}/GeneratedMaskSphere.nii.gz
   ${BRAINSROIAuto_BINARY_DIR}/maskSphere.nii.gz)
 set_tests_properties ( CompareMasks PROPERTIES DEPENDS RunBRAINSROIAuto)
