ENH: configure the convenience scripts for individual tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13148 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,8 +426,18 @@ CONFIGURE_FILE(
   )
 
 CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/runValgrindForOneModule.sh.in 
+  ${CMAKE_CURRENT_BINARY_DIR}/Scripts/runValgrindForOneModule.sh
+  )
+
+CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/computeCodeCoverageLocally.sh.in 
   ${CMAKE_CURRENT_BINARY_DIR}/Scripts/computeCodeCoverageLocally.sh
+  )
+
+CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scripts/computeCodeCoverageForOneTest.sh.in 
+  ${CMAKE_CURRENT_BINARY_DIR}/Scripts/computeCodeCoverageForOneTest.sh
   )
 
 CONFIGURE_FILE(
