BUG: Does not check for existence of Slicer3_EXE.  Prohibits use outside of Slicer.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13150 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
@@ -64,6 +64,7 @@ add_test(CountSamplesTest
 add_executable(RegisterImagesMultiResTest RegisterImagesMultiResTest.cxx)
 target_link_libraries(RegisterImagesMultiResTest RegisterImagesMultiResModule)
 
+IF( Slicer3_EXE )
 add_test(RegisterImagesMultiResTest ${Slicer3_EXE} --launch RegisterImagesMultiResTest
   --compare   ${BASELINE}/RegisterImagesMultiResTest.nrrd
   ${TEMP}/RegisterImagesMultiResResult.nrrd
@@ -75,3 +76,4 @@ add_test(RegisterImagesMultiResTest ${Slicer3_EXE} --launch RegisterImagesMultiR
   ${MRML_TEST_DATA}/moving.nrrd
   --resampledImage   ${TEMP}/RegisterImagesMultiResResult.nrrd
   )
+ENDIF( Slicer3_EXE )
