ENH: build diff demons, install in bin
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13157 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/CommandLineApplication/CMakeLists.txt
+++ b/Modules/ChangeTracker/CommandLineApplication/CMakeLists.txt
@@ -70,3 +70,5 @@ target_link_libraries(
   vtkTeem
   )
 #slicer3_install_plugins(${CLP_MODULE}Lib)
+
+ADD_SUBDIRECTORY(DiffeomorphicDemonsRegistration)
