--- a/Modules/ChangeTracker/CommandLineApplication/DiffeomorphicDemonsRegistration/CMakeLists.txt
+++ b/Modules/ChangeTracker/CommandLineApplication/DiffeomorphicDemonsRegistration/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(${CLP}Lib SHARED ${${CLP}_SOURCE})
 set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
 target_link_libraries (${CLP}Lib ITKIO ITKStatistics)
 
-add_executable(${CLP} ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx)
+add_executable(${CLP} ${Slicer3_SOURCE_DIR}/Applications/CLI/Templates/CommandLineSharedLibraryWrapper.cxx)
 target_link_libraries (${CLP} ${CLP}Lib)
 
 #the following line is an example of how to add a test to your project.
