COMP: Fixed compilation of BRAINSDemonWarp by creating a separate library, and including the windows flags for that library.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13172 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSDemonWarp/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSDemonWarp/CMakeLists.txt
@@ -42,20 +42,50 @@ configure_file(${BRAINSDemonWarp_SOURCE_DIR}/CTestCustom.ctest ${BRAINSDemonWarp
 include(${BRAINS_CMAKE_HELPER_DIR}/CMakeBRAINS3BuildMacros.cmake)
 ###
 
-set(CLP VBRAINSDemonWarp)
-set(${CLP}_SOURCE  VBRAINSDemonWarp.cxx VBRAINSDemonWarpPrimary.cxx)
-CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} VBRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "")
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/BRAINSDemonWarpCommonLib.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/BRAINSDemonWarpCommonLib.h
+  )
+
+
+set(BRAINSDemonWarpTemplatesLIB_SRCS
+         BRAINSDemonWarpTemplates_Vdouble.cxx
+         BRAINSDemonWarpTemplates_Vshort.cxx
+         BRAINSDemonWarpTemplates_Vushort.cxx
+         BRAINSDemonWarpTemplates_int.cxx
+         BRAINSDemonWarpTemplates_uint.cxx
+         BRAINSDemonWarpTemplates_Vfloat.cxx
+         BRAINSDemonWarpTemplates_Vuchar.cxx
+         BRAINSDemonWarpTemplates_double.cxx
+         BRAINSDemonWarpTemplates_short.cxx
+         BRAINSDemonWarpTemplates_ushort.cxx
+         BRAINSDemonWarpTemplates_Vint.cxx
+         BRAINSDemonWarpTemplates_Vuint.cxx
+         BRAINSDemonWarpTemplates_float.cxx
+         BRAINSDemonWarpTemplates_uchar.cxx
+         BRAINSDemonWarpTemplates.cxx
+)
+
+set(CLP BRAINSDemonWarpCommonLib)
+set(${CLP}_SOURCE ${BRAINSDemonWarpTemplatesLIB_SRCS})
+## NOTE:  The BRAINSDemonWarpCommonLib includes BRAINSDemonWarpPrimary.cxx and must be configured against BRAINSDemonWarpPrimary.xml
+CONFIGUREBRAINSORSLICERLIBRARY(${CLP} BRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "")
+## NOTE:  The BRAINSDemonWarpCommonLib includes VBRAINSDemonWarpPrimary.cxx and must be configured against VBRAINSDemonWarpPrimary.xml
 
 set(CLP BRAINSDemonWarp)
 set(${CLP}_SOURCE BRAINSDemonWarp.cxx BRAINSDemonWarpPrimary.cxx)
-CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "")
+CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "BRAINSDemonWarpCommonLib")
 
 if(BRAINS_BUILD) ## ONLY BUILD FOR BACKWARDS COMPATIBILITY IN BRAINS ENVIRONMENT
   set(CLP BRAINSDemonWarpCLP) ## NOTE: This is completely redundant, but is needed to support all the old scripts that use the original name
   set( ${CLP}_SOURCE BRAINSDemonWarpCLP.cxx BRAINSDemonWarpPrimary.cxx)
-  CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "")
+  CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "BRAINSDemonWarpCommonLib")
 ## HACK -- Need to write other backwards compatibility wrappers for the old names of BRAINSDemonWarpCLP
 endif(BRAINS_BUILD) ## ONLY BUILD FOR BACKWARDS COMPATIBILITY IN BRAINS ENVIRONMENT
+
+set(CLP VBRAINSDemonWarp)
+set(${CLP}_SOURCE VBRAINSDemonWarp.cxx VBRAINSDemonWarpPrimary.cxx)
+CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} VBRAINSDemonWarpPrimary.xml "${${CLP}_SOURCE}" "BRAINSDemonWarpCommonLib")
 
 ### Add the Testing Subdirectory.
 if(BUILD_TESTING)
