COMP:  Attempting ot blindly fix windows shared library issues.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13178 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
@@ -35,6 +35,12 @@ include(${BRAINS_CMAKE_HELPER_DIR}/CMakeBRAINS3BuildMacros.cmake)
 # No need to add with nothing to compile. add_subdirectory(BRAINSFit_Common)
 include(${BRAINS_CMAKE_HELPER_DIR}/IJMacros.txt)
 
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/BRAINSFitCommonLib.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/BRAINSFitCommonLib.h
+  )
+
+
 ###
 set(CLP BRAINSFit)
 set(${CLP}_SOURCE BRAINSFit.cxx BRAINSFitPrimary.cxx)
