COMP:  Attempting to make external object properly built for Windows computers.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13180 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSROIAuto/CMakeLists.txt
@@ -33,8 +33,14 @@ include(${BRAINS_CMAKE_HELPER_DIR}/CMakeBRAINS3BuildMacros.cmake)
 #SETOPTIONALDEBUGIMAGEVIEWER()
 
 
-# No need to add with nothing to compile. add_subdirectory(BRAINSFit_Common)
+# No need to add with nothing to compile. add_subdirectory(BRAINSROIAuto_Common)
 include(${BRAINS_CMAKE_HELPER_DIR}/IJMacros.txt)
+
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/BRAINSROIAutoCommonLib.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/BRAINSROIAutoCommonLib.h
+  )
+
 
 set(CLP BRAINSROIAuto)
 set(${CLP}_SOURCE BRAINSROIAuto.cxx )
