ENH: The output file composed with $1 should expect a full path.      This will be better done with a CMake function inside of the Testing/CMakeLists.txt file.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13201 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Scripts/runValgrindForOneModule.sh.in
+++ b/Scripts/runValgrindForOneModule.sh.in
@@ -13,4 +13,4 @@ valgrind \
  --suppressions=@PROJECT_BINARY_DIR@/../Slicer3-lib/Insight/CMake/InsightValgrind.supp                   \
  --suppressions=@PROJECT_BINARY_DIR@/../Slicer3-lib/Insight/Utilities/gdcm/CMake/gdcmValgrind.supp       \
  --suppressions=@PROJECT_BINARY_DIR@/../Slicer3-lib/Insight/Utilities/vxl/config/valgrind.supp           \
- $* |& tee /tmp/$1_valgrind.txt
+ $* |& tee $1_valgrind.txt
