--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -889,6 +889,35 @@ endif(vtk_WRAP_TCL)
 #set ::VTK_TK_LIB $::TCL_LIB_DIR/tk84.lib
 #set ::VTK_TCLSH $::TCL_BIN_DIR/tclsh84.exe
 
+## Need to set the library path so that vtkhash is found while building the parellel libraries
+#        set ::env(DYLD_LIBRARY_PATH) "$::Slicer3_LIB/VTK-build/bin"
+#        set OpenGLString "-framework OpenGL;/usr/X11R6/lib/libGL.dylib"
+#        runcmd $::CMAKE \
+#            -G$GENERATOR \
+#            -DCMAKE_BUILD_TYPE:STRING=$::VTK_BUILD_TYPE \
+#            -DBUILD_SHARED_LIBS:BOOL=ON \
+#            -DCMAKE_SKIP_RPATH:BOOL=OFF \
+#            -DCMAKE_CXX_COMPILER:STRING=$COMPILER_PATH/$COMPILER \
+#            -DCMAKE_CXX_COMPILER_FULLPATH:FILEPATH=$COMPILER_PATH/$COMPILER \
+#            -DCMAKE_SHARED_LINKER_FLAGS:STRING="-Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib" \
+#            -DCMAKE_EXE_LINKER_FLAGS="-Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib" \
+#            -DBUILD_TESTING:BOOL=OFF \
+#            -DVTK_USE_CARBON:BOOL=OFF \
+#            -DVTK_USE_COCOA:BOOL=OFF \
+#            -DVTK_USE_X:BOOL=ON \
+#            -DVTK_WRAP_TCL:BOOL=ON \
+#            -DVTK_USE_HYBRID:BOOL=ON \
+#            -DVTK_USE_PATENTED:BOOL=ON \
+#            -DVTK_USE_PARALLEL:BOOL=ON \
+#            -DVTK_DEBUG_LEAKS:BOOL=$::VTK_DEBUG_LEAKS \
+#            -DOPENGL_INCLUDE_DIR:PATH=/usr/X11R6/include \
+#            -DTCL_INCLUDE_PATH:PATH=$TCL_INCLUDE_DIR \
+#            -DTK_INCLUDE_PATH:PATH=$TCL_INCLUDE_DIR \
+#            -DTCL_LIBRARY:FILEPATH=$::VTK_TCL_LIB \
+#            -DTK_LIBRARY:FILEPATH=$::VTK_TK_LIB \
+#            -DTCL_TCLSH:FILEPATH=$::VTK_TCLSH \
+#            -DOPENGL_gl_LIBRARY:STRING=$OpenGLString \
+
 ExternalProject_Add(vtk
   DEPENDS ${vtk_DEPENDS}
   CVS_REPOSITORY ":pserver:anonymous:vtk@public.kitware.com:/cvsroot/VTK"
@@ -919,7 +948,7 @@ ExternalProject_Add(vtk
 
 if(Slicer3_USE_KWWIDGETS)
   set(proj KWWidgets)
-  set(kwwidgets_tag Slicer-3-4)
+  set(kwwidgets_tag Slicer-3-6)
 
   ExternalProject_Add(${proj}
     DEPENDS vtk
