--- a/Applications/CLI/RobustStatisticsSegmenter/CMakeLists.txt
+++ b/Applications/CLI/RobustStatisticsSegmenter/CMakeLists.txt
@@ -66,4 +66,8 @@ add_executable( SFLSRobustStat3DTestConsole SFLSRobustStat3DTestConsole.cxx)
 target_link_libraries( SFLSRobustStat3DTestConsole ITKCommon ITKBasicFilters ITKIO itkvnl)
 
 enable_testing()
-add_test(RSStest ${EXECUTABLE_OUTPUT_PATH}/SFLSRobustStat3DTestConsole grayscale.nrrd grayscale-label.nrrd rss-test-seg.nrrd 50 0.1 0.2)
+set(Slicer3_EXE ${Slicer3_BINARY_DIR}/Slicer3 )
+# message (STATUS "cmake current source dir = '${CMAKE_CURRENT_SOURCE_DIR}'")
+# message (STATUS "cmake current bin dir = '${CMAKE_CURRENT_BINARY_DIR}'")
+# message (STATUS "slicer3 exe = '${Slicer3_EXE}'")
+add_test(RSStest ${Slicer3_EXE} --launch SFLSRobustStat3DTestConsole ${CMAKE_CURRENT_SOURCE_DIR}/grayscale.nrrd ${CMAKE_CURRENT_SOURCE_DIR}/grayscale-label.nrrd ${CMAKE_CURRENT_BINARY_DIR}/rss-test-seg.nrrd 50 0.1 0.2)
