ENH: enable extra documentation for module categories
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13246 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -53,6 +53,8 @@ SET(modules
   QueryAtlas
   FetchMI
   SlicerWelcome
+  RegistrationWelcome
+  SegmentationWelcome
   ScriptedModule
   ScriptedModuleExample
   SlicerDaemon
