COMP:  Another attempt to try to build sufficient dependancies for supporting parallel builds of Slicer3.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13247 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSResample/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSResample/TestSuite/CMakeLists.txt
@@ -9,6 +9,8 @@
 add_executable( BRAINSResampleTest  ${BRAINSResample_SOURCE_DIR}/BRAINSResamplePrimary.cxx BRAINSResampleTest.cxx  )
 target_link_libraries(BRAINSResampleTest BRAINSCommonLib ITKAlgorithms ITKIO)
 set_target_properties(BRAINSResampleTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+add_dependencies(BRAINSResampleTest BRAINSResample)
+
 set(BRAINSResample_TESTS ${CMAKE_CURRENT_BINARY_DIR}/BRAINSResampleTest )
 
 
