ENH: move diff demons one level up to reduce the chances of exceeding 260 character path length limitation on windows
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13255 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/CMakeLists.txt
+++ b/Modules/ChangeTracker/CMakeLists.txt
@@ -82,6 +82,7 @@ set(ChangeTracker_SRCS
 SET(changetracker_libs
   DeformableMetric
   CommandLineApplication
+  DiffeomorphicDemonsRegistration
   )
 FOREACH(lib ${changetracker_libs})
   ADD_SUBDIRECTORY(${lib})
